// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Blockquote renders correctly 1`] = `
<blockquote
  class=""
>
  <p>
    Flying is learning how to throw yourself at the ground and miss.
  </p>
  <footer />
</blockquote>
`;

exports[`Blockquote with author and source renders correctly 1`] = `
<blockquote
  class=""
>
  <p>
    Flying is learning how to throw yourself at the ground and miss.
  </p>
  <footer>
    — 
    <strong>
      Douglas Adams
    </strong>
    , 
    <cite>
      The Hichhikers Guide to the Galaxy
    </cite>
  </footer>
</blockquote>
`;

exports[`Blockquote with author renders correctly 1`] = `
<blockquote
  class=""
>
  <p>
    Flying is learning how to throw yourself at the ground and miss.
  </p>
  <footer>
    — 
    <strong>
      Douglas Adams
    </strong>
  </footer>
</blockquote>
`;

exports[`Blockquote with author, source and URL renders correctly 1`] = `
.c0 {
  font-weight: 600;
  color: var(--colorText);
  -webkit-text-decoration-color: var(--colorLink);
  text-decoration-color: var(--colorLink);
  -webkit-text-decoration-thickness: 0.1em;
  text-decoration-thickness: 0.1em;
  text-underline-offset: 0.1em;
}

.c0:hover,
.c0:focus {
  -webkit-text-decoration-color: var(--colorLinkActive);
  text-decoration-color: var(--colorLinkActive);
}

@supports (not (text-decoration-color:red)) {
  .c0:hover,
  .c0:focus {
    color: var(--colorLink);
  }
}

<blockquote
  class=""
>
  <p>
    Many forms of Government have been tried, and will be tried in this world of sin and woe. No one pretends that democracy is perfect or all-wise. Indeed, it has been said that democracy is the worst form of government except all those other forms that have been tried from time to time.
  </p>
  <footer>
    — 
    <strong>
      Winston Churchill
    </strong>
    , 
    <cite>
      <a
        class="c0"
        font-weight="1"
        href="https://api.parliament.uk/historic-hansard/commons/1947/nov/11/parliament-bill"
      >
        Speech to the House of Commons
      </a>
    </cite>
  </footer>
</blockquote>
`;

exports[`Blockquote with multiple paragraphs renders correctly 1`] = `
<blockquote
  class=""
>
  <p>
    When you first rise in the morning tell yourself:
  </p>
  <p>
    I will encounter busybodies, ingrates, egomaniacs, liars, the jealous and cranks. They are all stricken with these afflictions because they don’t know the difference between good and evil.
  </p>
  <p>
    Because I have understood the beauty of good and the ugliness of evil, I know that these wrong-doers are still akin to me … and that none can to me harm, or implicate me in ugliness—nor can I be angry at my relatives or hate them. For we are made for cooperation.
  </p>
  <footer>
    — 
    <strong>
      Marcus Aurelius
    </strong>
    , 
    <cite>
      Meditations, 2.1
    </cite>
  </footer>
</blockquote>
`;

exports[`Blockquote with source and URL renders correctly 1`] = `
.c0 {
  font-weight: 600;
  color: var(--colorText);
  -webkit-text-decoration-color: var(--colorLink);
  text-decoration-color: var(--colorLink);
  -webkit-text-decoration-thickness: 0.1em;
  text-decoration-thickness: 0.1em;
  text-underline-offset: 0.1em;
}

.c0:hover,
.c0:focus {
  -webkit-text-decoration-color: var(--colorLinkActive);
  text-decoration-color: var(--colorLinkActive);
}

@supports (not (text-decoration-color:red)) {
  .c0:hover,
  .c0:focus {
    color: var(--colorLink);
  }
}

<blockquote
  class=""
>
  <p>
    Many forms of Government have been tried, and will be tried in this world of sin and woe. No one pretends that democracy is perfect or all-wise. Indeed, it has been said that democracy is the worst form of government except all those other forms that have been tried from time to time.
  </p>
  <footer>
    — 
    <cite>
      <a
        class="c0"
        font-weight="1"
        href="https://api.parliament.uk/historic-hansard/commons/1947/nov/11/parliament-bill"
      >
        Speech to the House of Commons
      </a>
    </cite>
  </footer>
</blockquote>
`;

exports[`Blockquote with source renders correctly 1`] = `
<blockquote
  class=""
>
  <p>
    Flying is learning how to throw yourself at the ground and miss.
  </p>
  <footer>
    — 
    <cite>
      The Hichhikers Guide to the Galaxy
    </cite>
  </footer>
</blockquote>
`;
